<resources>
    <string name="app_name">Memory Race</string>
    <string name="back_text_login">Bye Bye!</string>
    <string name="back_text_titleHome">Home</string>

    <string name="login_title">Login</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_desc">Button for login</string>
    <string name="login_text_register">New? Register Here!</string>
    <string name="login_button_exit_desc">Button for exiting the app</string>

    <string name="register_title">Register</string>
    <string name="register_email_hint">Enter E-mail</string>
    <string name="register_password_hint">Enter Password</string>
    <string name="register_button_register">Register</string>
    <string name="register_button_desc">Button for register</string>
    <string name="register_text_login">Already Registered? Join Here!</string>

    <string name="home_text_title">Bienvenido Usuario</string>
    <string name="home_button_exit_desc">Button for exiting home screen</string>
    <string name="home_imageButton_cardSelection_desc">Image button for card selection</string>
    <string name="home_imageButton_cardBackside_desc">Image button for card backside selection</string>
    <string name="home_imageButton_howToPlay_desc">Image button for information on how to play</string>
    <string name="home_imageButton_aboutUs_desc">Image button for information about us</string>

    <string name="game_row_one_card_one">Row One Card One</string>
    <string name="game_row_one_card_two">Row one card two</string>
    <string name="game_one_card_three">row one card three</string>
    <string name="game_row_one_card_four">row one card four</string>
    <string name="game_row_two_card_one">row two card one</string>
    <string name="game_row_two_card_two">row two card two</string>
    <string name="game_row_two_card_three">row two card three</string>
    <string name="game_row_two_card_four">row two card four</string>
    <string name="game_row_three_card_one">row three card one</string>
    <string name="game_row_three_card_two">row three card two</string>
    <string name="game_row_three_card_three">row three card three</string>
    <string name="game_row_three_card_four">row three card four</string>
    <string name="game_row_four_card_one">row four card one</string>
    <string name="game_row_four_card_two">row four card two</string>
    <string name="game_row_four_card_three">row four card three</string>
    <string name="game_row_four_card_four">row four card four</string>
    <string name="game_button_exit">Button for exiting to home screen.</string>
    <string name="game_title">Find the match!</string>
    <string name="game_button_restart">Restart</string>
    <string name="game_button_menu">Card Menu</string>
    <string name="about_footer">Universidad Pontificia Bolivariana - 2023</string>
    <string name="about_text">This app is designed to improve our memory capacity and cognitive skills. Enjoy the challenge of finding pairs of upside-down cards and sharpen your memory while having fun! Created by Kevin and David for the Aplicaciones Moviles course.</string>
    <string name="about_title">Memory Race</string>
</resources>