<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/login_textView_title"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginTop="228dp"
        android:gravity="center"
        android:text="@string/login_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_textInputLayout_email"
        android:layout_width="370dp"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_textView_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor,SpeakableTextPresentCheck">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_textInputLayout_password"
        android:layout_width="370dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/login_textInputLayout_email"
        app:layout_constraintStart_toStartOf="@+id/login_textInputLayout_email"
        app:layout_constraintTop_toBottomOf="@+id/login_textInputLayout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
            tools:ignore="LabelFor,SpeakableTextPresentCheck">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="370dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_button_login"
        android:contentDescription="@string/login_button_desc"
        app:layout_constraintEnd_toEndOf="@+id/login_textInputLayout_email"
        app:layout_constraintStart_toStartOf="@+id/login_textInputLayout_email"
        app:layout_constraintTop_toBottomOf="@+id/login_textInputLayout_password"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/login_text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_textView_title"
        app:layout_constraintStart_toStartOf="@+id/login_textView_title"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login" />

    <ImageButton
        android:id="@+id/login_imageButton_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/login_button_exit_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/login_text_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>