<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_1" >

    <ImageButton
        android:id="@+id/game_imageButton_exit"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/home_button_exit_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@drawable/leave_small" />

    <TextView
        android:id="@+id/register_textView_title"
        android:layout_width="359dp"
        android:layout_height="54dp"
        android:layout_marginTop="228dp"
        android:gravity="center"
        android:text="@string/register_title"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_textInputLayout_email"
        android:layout_width="370dp"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_textView_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="emailAddress"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:ems="10"
            android:hint="@string/register_email_hint"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor,SpeakableTextPresentCheck">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_textInputLayout_password"
        android:layout_width="370dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/register_textInputLayout_email"
        app:layout_constraintStart_toStartOf="@+id/register_textInputLayout_email"
        app:layout_constraintTop_toBottomOf="@+id/register_textInputLayout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="password"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:ems="10"
            android:hint="@string/register_password_hint"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
            tools:ignore="LabelFor,SpeakableTextPresentCheck">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="370dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/register_button_desc"
        android:text="@string/register_button_register"
        android:textSize="20sp"
        android:backgroundTint="#7fba00"
        app:layout_constraintEnd_toEndOf="@+id/register_textInputLayout_email"
        app:layout_constraintStart_toStartOf="@+id/register_textInputLayout_email"
        app:layout_constraintTop_toBottomOf="@+id/register_textInputLayout_password"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/register_text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_textView_title"
        app:layout_constraintStart_toStartOf="@+id/register_textView_title"
        app:layout_constraintTop_toBottomOf="@+id/register_button_register" />

    <ProgressBar
        android:id="@+id/register_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/register_text_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button_register" />

</androidx.constraintlayout.widget.ConstraintLayout>